layout issue fixed

--- a/style.css
+++ b/style.css
@@ -126,10 +126,11 @@
 .card-container {
 display: grid;
 grid-template-columns: repeat(3, 1fr);
-gap: 10px;
+gap: 20px;
 margin: 20px 10px;
-padding-left: 0 20px;
+padding: 0 20px;
 justify-items: center;
+max-width: 1200px;
 }
 .card-container ul {
     list-style: none;
@@ -142,6 +143,7 @@ justify-items: center;
     box-shadow: 0 6px 16px rgba(0, 0, 0, 0.25);
     padding: 15px;
     margin: 20px 10px;
+    box-sizing: border-box;
 
 }
 .product-head {
